<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actionButtons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="8dp"
    android:background="@drawable/action_buttons_background"
    android:gravity="top|center_horizontal"
    android:orientation="horizontal"
    android:paddingBottom="50dp">

    <ToggleButton
        android:id="@+id/tbMic"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:checked="true"
        android:drawableTop="@drawable/selector_toggle_mic"
        android:gravity="center_vertical|center_horizontal"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textOff="@string/unmute"
        android:textOn="@string/mute"
        android:textScaleX="0.9"
        android:textSize="13sp"
        tools:checked="true" />

    <ToggleButton
        android:id="@+id/tbCamEnable"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:checked="true"
        android:drawableTop="@drawable/selector_toggle_cam"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textOff="@string/cam_on"
        android:textOn="@string/cam_off"
        android:textScaleX="0.9"
        android:textSize="13sp"
        android:visibility="visible" />

    <ToggleButton
        android:id="@+id/tbEndCall"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:checked="true"
        android:drawableTop="@drawable/ic_end_call"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textOff="@string/end_call"
        android:textOn="@string/end_call"
        android:textScaleX="0.9"
        android:textSize="13sp" />

    <ToggleButton
        android:id="@+id/tbShare"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:checked="true"
        android:drawableTop="@drawable/selector_toggle_screenshare"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textOff="@string/stop_sharing"
        android:textOn="@string/screen_share"
        android:textScaleX="0.9"
        android:textSize="13sp"
        android:visibility="visible" />

    <ToggleButton
        android:id="@+id/tbSwapCam"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:checked="true"
        android:drawableTop="@drawable/selector_toggle_swap_cam"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textOff="@string/swap_cam"
        android:textOn="@string/swap_cam"
        android:textScaleX="0.9"
        android:textSize="13sp"
        android:visibility="visible" />
</LinearLayout>