<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:elevation="20dp"
        app:contentInsetStart="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/flBack"
            android:layout_width="36dp"
            android:layout_height="36dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_arrow_back" />
        </FrameLayout>

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_info"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="8.9.10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sdk_version"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvSdkVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="5.6.7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_id"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvAppId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_key"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvAuthKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_secret"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvAuthSecret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_key"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvAccountKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_domain"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvApiDomain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="https://apidomain.example.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_domain"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvChatDomain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="chatdomain.example.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/janus_server"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvJanusServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="janus.example.com" />

        <TextView
            android:id="@+id/text_qa_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qa_verion"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvQaVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:text="1.5.22.03" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:padding="2dp"
            android:src="@drawable/ic_logo_app_info" />
    </LinearLayout>
</LinearLayout>