<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:elevation="20dp"
        app:contentInsetStart="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/flBack"
            android:layout_width="36dp"
            android:layout_height="36dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_arrow_back" />
        </FrameLayout>

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/video_configuration"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <com.quickblox.sample.conference.kotlin.presentation.screens.settings.views.selectionlist.CustomSelectionView
        android:id="@+id/selectionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:title="@string/video_formats" />

    <com.quickblox.sample.conference.kotlin.presentation.screens.settings.views.CustomSeekBar
        android:id="@+id/seekbarFrameRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/selectionList"
        app:max="30"
        app:min="0"
        app:step="5"
        app:title="@string/frame_rate" />

    <com.quickblox.sample.conference.kotlin.presentation.screens.settings.views.CustomSeekBar
        android:id="@+id/seekbarBitrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/seekbarFrameRate"
        app:max="2000"
        app:min="0"
        app:step="100"
        app:title="@string/bandwidth" />
</androidx.constraintlayout.widget.ConstraintLayout>