<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:elevation="20dp"
        app:contentInsetStart="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/flBack"
            android:layout_width="36dp"
            android:layout_height="36dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_arrow_back" />
        </FrameLayout>

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/audio_configuration"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbAec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layoutDirection="rtl"
        android:text="@string/disable_aec"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbOpenSles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layoutDirection="rtl"
        android:text="@string/opensles"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/cbAec" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbProcessing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layoutDirection="rtl"
        android:text="@string/audio_processing"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/cbOpenSles" />
</androidx.constraintlayout.widget.ConstraintLayout>