<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_drop_down"
    android:elevation="10dp">

    <TextView
        android:id="@+id/tvStartConference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_default_clickable_around_top"
        android:lineSpacingMultiplier="1.20"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/chat_conference"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStartStream"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:lineSpacingMultiplier="1.20"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/chat_stream"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartConference" />

    <TextView
        android:id="@+id/tvChatInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:lineSpacingMultiplier="1.20"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/chat_info"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartStream" />

    <TextView
        android:id="@+id/tvLeave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_default_clickable_around_bottom"
        android:lineSpacingMultiplier="1.20"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/leave_chat"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChatInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>