<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_drop_down"
    android:elevation="10dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lineSpacingMultiplier="1.20"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="User named" />

    <View
        android:id="@+id/vDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvVideoConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:lineSpacingMultiplier="1.20"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/video_configuration"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/vDivider" />

    <TextView
        android:id="@+id/tvAudioConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:lineSpacingMultiplier="1.20"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/audio_configuration"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/tvVideoConf" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:lineSpacingMultiplier="1.20"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/app_info"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/tvAudioConf" />

    <View
        android:id="@+id/vDividerLogOut"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_default_clickable_around_bottom"
        android:lineSpacingMultiplier="1.20"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:text="@string/logout"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/vDividerLogOut" />
</androidx.constraintlayout.widget.ConstraintLayout>