<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bgBlue"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/frame_rate" />

    <TextView
        android:id="@+id/tvMinValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/textHint"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:text="@string/min_frame_rate" />

    <TextView
        android:id="@+id/tvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/tvMaxValue"
        app:layout_constraintStart_toEndOf="@+id/tvMinValue"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:text="11" />

    <TextView
        android:id="@+id/tvMaxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/textHint"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:text="@string/max_frame_rate" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:thumb="@drawable/ic_slider"
        app:layout_constraintTop_toBottomOf="@+id/tvMinValue" />
</androidx.constraintlayout.widget.ConstraintLayout>